force socket & flag

--- a/platform/kamailio/self/kamailio.cfg
+++ b/platform/kamailio/self/kamailio.cfg
@@ -1,17 +1,11 @@
 #!KAMAILIO
 ####### Defined Values #########
-# #!define MULTIDOMAIN 0
-
-# - flags
-# FLT_ - per transaction (message) flags
-#	FLB_ - per branch flags
-#!define FLT_NATS 5
-#!define FLB_NATB 6
-#!define FLB_NATSIPPING 7
+#!define BRANCH_NATOUT_FLAG 6
+#!define BRANCH_NATSIPPING_FLAG 7
 
 ####### Global Parameters #########
 ### LOG Levels: 3=DBG, 2=INFO, 1=NOTICE, 0=WARN, -1=ERR
-debug=2
+debug=4
 log_stderror=no
 memdbg=5
 memlog=5
@@ -23,9 +17,6 @@ log_facility=LOG_LOCAL5
 
 fork=yes
 children=8
-
-# multi-homed
-mhomed = 1
 
 tcp_connect_timeout=5
 tcp_send_timeout=2
@@ -58,7 +49,7 @@ server_header="Server: AccessLayerService"
 
 ####### Modules Section ########
 /* set paths to location of modules (to sources or installation folders) */
-mpath="/usr/local/lib64/kamailio/modules/"
+loadpath "/usr/local/lib64/kamailio/modules"
 # ----------------- load modules ---------------
 loadmodule "jsonrpcs.so"
 loadmodule "ctl.so"
@@ -135,12 +126,12 @@ modparam("registrar", "min_expires", 300)
 # ----- nathelper params -----
 modparam("nathelper", "natping_interval", 300)
 modparam("nathelper", "ping_nated_only", 1)
-modparam("nathelper", "sipping_bflag", FLB_NATSIPPING)
+modparam("nathelper", "sipping_bflag", BRANCH_NATSIPPING_FLAG)
 modparam("nathelper", "sipping_from", "sip:nathelper@libre.sbc")
 
 # params needed for NAT traversal in other modules
 modparam("nathelper|registrar", "received_avp", "$avp(RECEIVED)")
-modparam("usrloc", "nat_bflag", FLB_NATB)
+modparam("usrloc", "nat_bflag", BRANCH_NATOUT_FLAG)
 
 #!ifdef WITH_TLS
 # ----- tls params -----
