define global vars

--- a/platform/kamailio/self/kamailio.cfg
+++ b/platform/kamailio/self/kamailio.cfg
@@ -2,6 +2,7 @@
 ####### Defined Values #########
 #!define BRANCH_NATOUT_FLAG 6
 #!define BRANCH_NATSIPPING_FLAG 7
+#!define LIBRE_USER_LOCATION 'LIBREUL'
 
 ####### Global Parameters #########
 ### LOG Levels: 3=DBG, 2=INFO, 1=NOTICE, 0=WARN, -1=ERR
@@ -110,7 +111,7 @@ modparam("rr", "force_send_socket", 1)
 modparam("dialog", "db_mode", 0)
 
 # ----- User Location -----
-modparam("usrloc", "preload", "libreul")
+modparam("usrloc", "preload", LIBRE_USER_LOCATION)
 modparam("usrloc", "db_mode", 0)
 modparam("usrloc", "hash_size", 16)
 modparam("usrloc", "use_domain", 1)
