--- a/platform/kamailio/self/kamailio.cfg
+++ b/platform/kamailio/self/kamailio.cfg
@@ -1,11 +1,10 @@
 #!KAMAILIO
-####### Defined Values #########
+## --------------------------------------------------------------------------------------------------------------------------------
 #!define BRANCH_NATOUT_FLAG 6
 #!define BRANCH_NATSIPPING_FLAG 7
 #!define LIBRE_USER_LOCATION 'LIBREUL'
 
-####### Global Parameters #########
-### LOG Levels: 3=DBG, 2=INFO, 1=NOTICE, 0=WARN, -1=ERR
+## --------------------------------------------------------------------------------------------------------------------------------
 debug=4
 log_stderror=no
 memdbg=5
@@ -21,16 +20,13 @@ children=8
 
 tcp_connect_timeout=5
 tcp_send_timeout=2
-# life time of TCP connection when there is no traffic
-# - a bit higher than registration expires to cope with UA behind NAT
+# life time of TCP connection when there is no traffic a bit higher than registration expires to cope with UA behind NAT
 tcp_connection_lifetime=3605
 tcp_accept_no_cl=yes
 tcp_rd_buf_size=16384
-
 # disable the auto discovery of local aliases based on reverse DNS on IPs (default on)
 auto_aliases=no
-
-/* add local domain aliases */
+# add local domain aliases
 alias="libre.sbc"
 
 #!ifdef WITH_TLS
@@ -48,10 +44,8 @@ listen=udp:127.0.0.3:5060
 # server header
 server_header="Server: AccessLayerService"
 
-####### Modules Section ########
-/* set paths to location of modules (to sources or installation folders) */
+## ≈
 loadpath "/usr/local/lib64/kamailio/modules"
-# ----------------- load modules ---------------
 loadmodule "jsonrpcs.so"
 loadmodule "ctl.so"
 loadmodule "kex.so"
@@ -83,8 +77,7 @@ loadmodule "pike.so"
 loadmodule "app_lua.so"
 loadmodule "xlog.so"
 
-# ----------------- setting module-specific parameters ---------------
-
+## --------------------------------------------------------------------------------------------------------------------------------
 # ------ RPC interface over JSON-RPC ------
 modparam("jsonrpcs", "pretty_format", 1)
 modparam("jsonrpcs", "fifo_name", "/run/kamailio/kamailio_rpc.fifo")
@@ -101,10 +94,8 @@ modparam("tm", "fr_inv_timer", 120000)
 modparam("tm", "auto_inv_100_reason", "LibreSBC Trying")
 
 # ---- Record Routing Logic -----
-# add value to ;lr param to cope with most of the UAs
 modparam("rr", "enable_full_lr", 1)
-# do not append from tag to the RR (no need for this script)
-# modparam("rr", "append_fromtag", 0)
+modparam("rr", "append_fromtag", 1)
 modparam("rr", "force_send_socket", 1)
 
 # ---- stateful dialog state (not just transaction state by rr) ----
