--- a/platform/kamailio/self/kamailio.cfg
+++ b/platform/kamailio/self/kamailio.cfg
@@ -44,7 +44,7 @@ listen=udp:127.0.0.3:5060
 # server header
 server_header="Server: AccessLayerService"
 
-## ≈
+## --------------------------------------------------------------------------------------------------------------------------------
 loadpath "/usr/local/lib64/kamailio/modules"
 loadmodule "jsonrpcs.so"
 loadmodule "ctl.so"
@@ -142,5 +142,5 @@ modparam("pike", "remove_latency", 4)
 modparam("htable", "htable", "ipban=>size=8;autoexpire=600;")
 
 # ----- LUA ROUTING ENGINE -----
-modparam("app_lua", "load", "{{destinationdir}}/callng/kami.lua")
+modparam("app_lua", "load", "/usr/local/etc/kamailio/kami.lua")
 cfgengine "lua"
