--- a/platform/kamailio/self/kamailio.cfg
+++ b/platform/kamailio/self/kamailio.cfg
@@ -3,6 +3,7 @@
 #!define BRANCH_NATOUT_FLAG 6
 #!define BRANCH_NATSIPPING_FLAG 7
 #!define LIBRE_USER_LOCATION 'LIBREUL'
+#!define LIBRE_TRYING_REASON 'LibreSBC Trying'
 
 ## --------------------------------------------------------------------------------------------------------------------------------
 debug=2
@@ -91,7 +92,7 @@ modparam("tm", "failure_reply_mode", 3)
 modparam("tm", "fr_timer", 30000)
 # default invite retransmission timeout after 1xx: 120sec
 modparam("tm", "fr_inv_timer", 120000)
-modparam("tm", "auto_inv_100_reason", "LibreSBC Trying")
+modparam("tm", "auto_inv_100_reason", LIBRE_TRYING_REASON)
 
 # ---- Record Routing Logic -----
 modparam("rr", "enable_full_lr", 1)
@@ -142,5 +143,5 @@ modparam("pike", "remove_latency", 4)
 modparam("htable", "htable", "ipban=>size=8;autoexpire=600;")
 
 # ----- LUA ROUTING ENGINE -----
-modparam("app_lua", "load", "/usr/local/etc/kamailio/kami.lua")
+modparam("app_lua", "load", "/usr/local/share/lua/5.2/callng/kami.lua")
 cfgengine "lua"
