--- a/liberator/templates/kamcfg/kamailio.j2.cfg
+++ b/liberator/templates/kamcfg/kamailio.j2.cfg
@@ -95,9 +95,9 @@ loadmodule "xlog.so"
 ## --------------------------------------------------------------------------------------------------------------------------------
 # ------ RPC interface over JSON-RPC ------
 modparam("jsonrpcs", "pretty_format", 1)
-modparam("jsonrpcs", "fifo_name", "/run/kamailio/{{layer}}.rpc.fifo")
-modparam("jsonrpcs", "dgram_socket", "/run/kamailio/{{layer}}.rpc.sock")
-modparam("ctl", "binrpc", "unix:/run/kamailio/{{layer}}.ctl")
+modparam("jsonrpcs", "fifo_name", "{{piddir}}/{{layer}}.rpc.fifo")
+modparam("jsonrpcs", "dgram_socket", "{{piddir}}/{{layer}}.rpc.sock")
+modparam("ctl", "binrpc", "unix:{{piddir}}/{{layer}}.ctl")
 
 # ------ Stateful Processing of SIP Transactions -----
 # auto-discard branches from previous serial forking leg
@@ -144,7 +144,7 @@ modparam("usrloc", "nat_bflag", BRANCH_NATOUT_FLAG)
 
 # ----- tls params -----
 {% if 'tls' in kamcfgs.transports %}
-modparam("tls", "config", "/usr/local/etc/kamailio/{{layer}}.tls.cfg")
+modparam("tls", "config", "{{cfgdir}}/{{layer}}.tls.cfg")
 {% endif %}
 
 # ----- debugger params -----
