re-order and comment

--- a/liberator/templates/kamcfg/layer.j2.cfg
+++ b/liberator/templates/kamcfg/layer.j2.cfg
@@ -50,7 +50,7 @@ listen={{sockets.srcsocket.transport}}:{{sockets.srcsocket.ip}}:{{sockets.srcsoc
 ## --------------------------------------------------------------------------------------------------------------------------------
 loadpath "/usr/local/lib64/kamailio/modules"
 ## --------------------------------------------------------------------------------------------------------------------------------
-## RPC interface over JSON-RPC
+## RPC INTERFACE OVER JSON-RPC
 loadmodule "jsonrpcs.so"
 modparam("jsonrpcs", "pretty_format", 1)
 modparam("jsonrpcs", "fifo_name", "{{piddir}}/{{layer}}.rpc.fifo")
@@ -61,8 +61,12 @@ modparam("ctl", "binrpc", "unix:{{piddir}}/{{layer}}.ctl")
 ## --------------------------------------------------------------------
 loadmodule "kex.so"
 loadmodule "corex.so"
+loadmodule "pv.so"
+loadmodule "maxfwd.so"
+loadmodule "outbound"
+loadmodule "sl.so"
 ## --------------------------------------------------------------------
-## Stateful Processing of SIP Transactions
+## STATEFULL PROCESSING SIP TRANSACTION
 loadmodule "tm.so"
 loadmodule "tmx.so"
 modparam("tm", "failure_reply_mode", 3)                                 # auto-discard branches from previous serial forking leg
@@ -70,23 +74,17 @@ modparam("tm", "fr_timer", 30000)                                       # defaul
 modparam("tm", "fr_inv_timer", 120000)                                  # default invite retransmission timeout after 1xx: 120sec
 modparam("tm", "auto_inv_100_reason", "{{kamcfgs.trying_reason}}")
 ## --------------------------------------------------------------------
-loadmodule "outbound"
-loadmodule "sl.so"
-## --------------------------------------------------------------------
-## Record Routing Logic
+## RECORD ROUTE LOGIC
 loadmodule "rr.so"
 modparam("rr", "enable_full_lr", 1)
 modparam("rr", "append_fromtag", 1)
 modparam("rr", "force_send_socket", 1)
 ## --------------------------------------------------------------------
-loadmodule "pv.so"
-loadmodule "maxfwd.so"
-## --------------------------------------------------------------------
-## stateful dialog state (not just transaction state by rr)
+## STATEFUL PROCESSING SIP DIALOG
 loadmodule "dialog.so"
 modparam("dialog", "db_mode", 0)
 ## --------------------------------------------------------------------
-## User Location
+## USER LOCATION
 loadmodule "usrloc.so"
 modparam("usrloc", "preload", LIBRE_USER_LOCATION)
 modparam("usrloc", "db_mode", 0)
@@ -94,7 +92,7 @@ modparam("usrloc", "hash_size", 16)
 modparam("usrloc", "use_domain", 1)
 modparam("usrloc", "nat_bflag", BRANCH_NATOUT_FLAG)
 ## --------------------------------------------------------------------
-## Register processing logic, location managed by the usrloc
+## REGISTER PROCESSING LOGIC
 loadmodule "registrar.so"
 #modparam("registrar", "method_filtering", 0)
 modparam("registrar", "max_contacts", 1)
