--- a/liberator/templates/kamcfg/layer.j2.cfg
+++ b/liberator/templates/kamcfg/layer.j2.cfg
@@ -17,6 +17,7 @@ latency_limit_db=200000
 log_facility=LOG_LOCAL5
 fork=yes
 children=8
+shm_mem_size=128
 
 auto_aliases=no
 {% for domain in kamcfgs.domains -%}
