support topology hidding

--- a/liberator/templates/kamcfg/layer.j2.cfg
+++ b/liberator/templates/kamcfg/layer.j2.cfg
@@ -82,6 +82,13 @@ modparam("rr", "force_send_socket", 1)
 ## --------------------------------------------------------------------
 loadmodule "pv.so"
 loadmodule "maxfwd.so"
+{%- if kamcfgs.topology_hiding %}
+## --------------------------------------------------------------------
+## TOPOLOGY HIDDING
+loadmodule "topoh"
+modparam("topoh", "mask_key", "{{kamcfgs.randomsecret}}")
+modparam("topoh", "mask_ip", "{{kamcfgs.topology_hiding}}")
+{%- endif %}
 ## --------------------------------------------------------------------
 ## STATEFUL PROCESSING SIP DIALOG
 loadmodule "dialog.so"
@@ -123,7 +130,7 @@ modparam("nathelper", "received_avp", "$avp(RECEIVED)")
 ## TLS
 loadmodule "tls.so"
 modparam("tls", "config", "{{cfgdir}}/{{layer}}.tls.cfg")
-{% endif %}
+{%- endif %}
 ## --------------------------------------------------------------------
 ## DEBUGER
 loadmodule "debugger.so"
