disable exposes infrastructure info

--- a/liberator/templates/kamcfg/layer.j2.cfg
+++ b/liberator/templates/kamcfg/layer.j2.cfg
@@ -6,6 +6,7 @@
 ## --------------------------------------------------------------------------------------------------------------------------------
 log_name = '{{layer}}'
 server_header="Server: {{kamcfgs.server_header}}"
+sip_warning=0
 debug=2
 log_stderror=no
 memdbg=5
