--- a/liberator/templates/kamcfg/layer.j2.cfg
+++ b/liberator/templates/kamcfg/layer.j2.cfg
@@ -117,7 +117,13 @@ loadmodule "siputils.so"
 loadmodule "sanity.so"
 loadmodule "uac.so"
 loadmodule "kemix.so"
+## --------------------------------------------------------------------
+## DIGEST AUTHENTICATION
 loadmodule "auth.so"
+#modparam("auth", "nonce_count", 1)
+#modparam("auth", "qop", "auth")
+#modparam("auth", "nonce_expire", 60)
+#modparam("auth", "nonce_auth_max_drift", 2)
 ## --------------------------------------------------------------------
 ## NAT HELPER MODULE
 loadmodule "nathelper.so"
