--- a/liberator/templates/kamcfg/layer.j2.cfg
+++ b/liberator/templates/kamcfg/layer.j2.cfg
@@ -120,10 +120,11 @@ loadmodule "kemix.so"
 ## --------------------------------------------------------------------
 ## DIGEST AUTHENTICATION
 loadmodule "auth.so"
-#modparam("auth", "nonce_count", 1)
-#modparam("auth", "qop", "auth")
-#modparam("auth", "nonce_expire", 60)
-#modparam("auth", "nonce_auth_max_drift", 2)
+modparam("auth", "nonce_count", 1)
+modparam("auth", "qop", "auth")
+modparam("auth", "nonce_expire", 300)
+modparam("auth", "nonce_auth_max_drift", 3)
+modparam("auth", "algorithm", "MD5")
 ## --------------------------------------------------------------------
 ## NAT HELPER MODULE
 loadmodule "nathelper.so"
