--- a/liberator/templates/kamcfg/layer.j2.cfg
+++ b/liberator/templates/kamcfg/layer.j2.cfg
@@ -145,14 +145,16 @@ loadmodule "debugger.so"
 modparam("debugger", "cfgtrace", 1)
 ## --------------------------------------------------------------------
 ## PIKE ANTI-FLOODING
+## ban if [x & 3xIPv4 8xIPv6] requests in the sampling_time_unit second
 loadmodule "pike.so"
 modparam("pike", "sampling_time_unit", 2)
-modparam("pike", "reqs_density_per_unit", 16)
+modparam("pike", "reqs_density_per_unit", 20)
 modparam("pike", "remove_latency", 4)
 ## --------------------------------------------------------------------
 ## SHARED MEMORY HASH TABLE
 loadmodule "htable.so"
-modparam("htable", "htable", "ipban=>size=8;autoexpire=600;")
+modparam("htable", "htable", "antiflooding=>size=8;autoexpire=600;")
+modparam("htable", "htable", "authfailure=>size=10;autoexpire=900;")
 ## --------------------------------------------------------------------
 loadmodule "xlog.so"
 ## --------------------------------------------------------------------
