--- a/liberator/templates/nft/nftables.j2.conf
+++ b/liberator/templates/nft/nftables.j2.conf
@@ -7,43 +7,57 @@
 flush ruleset
 
 table inet LIBREFW {
-	chain INCOMING {
-		# type filter hook prerouting priority 0; policy drop;
-		type filter hook input priority 0; policy drop;
-		    iifname lo accept
-			iifname lo ip saddr != 127.0.0.0/8 counter drop
-			iifname lo ip6 saddr != ::1/128 counter drop
-			iifname != lo ip daddr 127.0.0.0/8 counter drop
+    chain INBOUND {
+        type filter hook input priority 0; policy drop;
+            iifname lo ip saddr != 127.0.0.0/8 counter drop
+            iifname lo ip6 saddr != ::1/128 counter drop
+            iifname lo accept
+            iifname != lo ip daddr 127.0.0.0/8 counter drop
 
-			ct state invalid counter drop comment "early drop of invalid packets"
-			ct state {established, related} counter accept
-			#---------------------------------------------------------------------
-			define RTPPORTS = { {{rtpportrange|join('-')}} }
-			#---------------------------------------------------------------------
-			{%- for name, data in sipprofiles.items() %}
-			# TRAFFIC FILTER PER SIP PROFILE - {{name|upper}}
-			define FESIP{{loop.index}} = { {{data.farendsipaddrs}} }
-			define FERTP{{loop.index}} = { {{data.farendrtpaddrs}} }
-			tcp dport { {{data.siptcpports|join(',')}} } ip saddr $FESIP{{loop.index}} ip daddr {{data.sip_ip}} counter accept
-			udp dport { {{data.sipudpports|join(',')}} } ip saddr $FESIP{{loop.index}} ip daddr {{data.sip_ip}} counter accept
-			udp dport $RTPPORTS ip saddr $FERTP{{loop.index}} ip daddr {{data.rtp_ip}} counter accept
-			{%- endfor %}
-			#---------------------------------------------------------------------
-			# PRECONFIGURED FIREWALL
-			include "*.libre.nft"
-			#---------------------------------------------------------------------
-			tcp dport 22 ip saddr 0.0.0.0/0 counter accept
-			# accept neighbour discovery otherwise connectivity breaks
-			#icmpv6 type { nd-neighbor-solicit, echo-request, nd-router-advert, nd-neighbor-advert } counter accept
-			icmp type echo-request limit rate 1/second counter accept
+            ip saddr @AuthFailure drop
 
-			# count and drop any other traffic
-			counter drop
-	}
-	chain OUTGOING {
-		type filter hook output priority 0;
-	}
-	chain TRANSFER {
-		type filter hook forward priority 0; policy drop;
-	}
+            tcp flags != syn ct state new drop comment "first packet is not syn"
+            tcp flags & (fin|syn) == (fin|syn) drop comment "new and send fin"
+            tcp flags & (syn|rst) == (syn|rst) drop comment "never met but reset"
+            tcp flags & (fin|syn|rst|psh|ack|urg) < (fin) drop comment "attack"
+            tcp flags & (fin|syn|rst|psh|ack|urg) == (fin|psh|urg) drop comment "xmas attack"
+            ct state invalid counter drop comment "early drop of invalid packets"
+
+            ct state {established, related} counter accept
+            #---------------------------------------------------------------------
+            define RTPPORTS = { {{rtpportrange|join('-')}} }
+            #---------------------------------------------------------------------
+            {%- for name, data in sipprofiles.items() %}
+            # TRAFFIC FILTER PER SIP PROFILE - {{name|upper}}
+            define FESIP{{loop.index}} = { {{data.farendsipaddrs}} }
+            define FERTP{{loop.index}} = { {{data.farendrtpaddrs}} }
+            tcp dport { {{data.siptcpports|join(',')}} } ip saddr $FESIP{{loop.index}} ip daddr {{data.sip_ip}} counter accept
+            udp dport { {{data.sipudpports|join(',')}} } ip saddr $FESIP{{loop.index}} ip daddr {{data.sip_ip}} counter accept
+            udp dport $RTPPORTS ip saddr $FERTP{{loop.index}} ip daddr {{data.rtp_ip}} counter accept
+            {%- endfor %}
+            #---------------------------------------------------------------------
+            # PRECONFIGURED FIREWALL
+            include "*.libre.nft"
+            #---------------------------------------------------------------------
+            tcp dport 22 ip saddr 0.0.0.0/0 counter accept
+            # accept neighbour discovery otherwise connectivity breaks
+            #icmpv6 type { nd-neighbor-solicit, echo-request, nd-router-advert, nd-neighbor-advert } counter accept
+            icmp type echo-request limit rate 1/second counter accept
+
+            # count and drop any other traffic
+            counter drop
+    }
+    chain OUTBOUND {
+        type filter hook output priority 0;
+    }
+    chain FORWARD {
+        type filter hook forward priority 0; policy drop;
+    }
+
+    set AuthFailure {
+        type ipv4_addr
+        flags timeout
+        timeout 900s
+    }
+
 }
