add bruteforce as next level for authfailure

--- a/liberator/templates/nft/nftables.j2.conf
+++ b/liberator/templates/nft/nftables.j2.conf
@@ -60,4 +60,9 @@ table inet LIBREFW {
         timeout 900s
     }
 
+    set BruteForce {
+        type ipv4_addr
+        flags timeout
+        timeout 72h
+    }
 }
