--- a/liberator/templates/kamcfg/layer.j2.cfg
+++ b/liberator/templates/kamcfg/layer.j2.cfg
@@ -155,6 +155,7 @@ modparam("pike", "remove_latency", 4)
 loadmodule "htable.so"
 modparam("htable", "htable", "antiflooding=>size=10;autoexpire=600;")
 modparam("htable", "htable", "authfailure=>size=10;autoexpire=600;")
+modparam("htable", "htable", "bruteforce=>size=8;autoexpire=18000;")
 ## --------------------------------------------------------------------
 loadmodule "xlog.so"
 ## --------------------------------------------------------------------
