change table name

--- a/liberator/templates/nft/nftables.j2.conf
+++ b/liberator/templates/nft/nftables.j2.conf
@@ -57,12 +57,12 @@ table inet LIBREFW {
     set AuthFailure {
         type ipv4_addr
         flags timeout
-        timeout 900s
+        timeout 1h
     }
 
-    set BruteForce {
+    set AttackAvoid {
         type ipv4_addr
         flags timeout
-        timeout 72h
+        timeout 10d
     }
 }
