--- a/liberator/templates/nft/nftables.j2.conf
+++ b/liberator/templates/nft/nftables.j2.conf
@@ -15,6 +15,8 @@ table inet LIBREFW {
             iifname != lo ip daddr 127.0.0.0/8 counter drop
 
             ip saddr @AuthFailure drop
+            ip saddr @AttackAvoid drop
+            ip saddr @AntiFlooding drop
 
             tcp flags != syn ct state new drop comment "first packet is not syn"
             tcp flags & (fin|syn) == (fin|syn) drop comment "new and send fin"
@@ -64,5 +66,10 @@ table inet LIBREFW {
         type ipv4_addr
         flags timeout
         timeout 10d
+    }
+
+    set AntiFlooding {
+        type ipv4_addr
+        flags timeout
     }
 }
