--- a/liberator/templates/kamcfg/layer.j2.cfg
+++ b/liberator/templates/kamcfg/layer.j2.cfg
@@ -144,18 +144,20 @@ modparam("tls", "config", "{{cfgdir}}/{{layer}}.tls.cfg")
 loadmodule "debugger.so"
 modparam("debugger", "cfgtrace", 1)
 ## --------------------------------------------------------------------
+## SHARED MEMORY HASH TABLE
+loadmodule "htable.so"
+modparam("htable", "htable", "authfailure=>size=10;autoexpire={{kamcfgs.authfailure.window}};")
+modparam("htable", "htable", "attackavoid=>size=10;autoexpire={{kamcfgs.attackavoid.window}};")
+{%- if kamcfgs.antiflooding %}
+modparam("htable", "htable", "antiflooding=>size=10;autoexpire={{kamcfgs.antiflooding.window}};")
+## --------------------------------------------------------------------
 ## PIKE ANTI-FLOODING
 ## ban if [x & 3xIPv4 8xIPv6] requests in the sampling_time_unit second
 loadmodule "pike.so"
-modparam("pike", "sampling_time_unit", 2)
-modparam("pike", "reqs_density_per_unit", 20)
-modparam("pike", "remove_latency", 4)
-## --------------------------------------------------------------------
-## SHARED MEMORY HASH TABLE
-loadmodule "htable.so"
-modparam("htable", "htable", "antiflooding=>size=10;autoexpire=600;")
-modparam("htable", "htable", "authfailure=>size=10;autoexpire=600;")
-modparam("htable", "htable", "attackavoid=>size=10;autoexpire=18000;")
+modparam("pike", "sampling_time_unit", {{kamcfgs.antiflooding.sampling}})
+modparam("pike", "reqs_density_per_unit", {{kamcfgs.antiflooding.density}})
+modparam("pike", "remove_latency", {{2*kamcfgs.antiflooding.sampling}})
+{%- endif %}
 ## --------------------------------------------------------------------
 loadmodule "xlog.so"
 ## --------------------------------------------------------------------
