--- a/liberator/templates/kamcfg/layer.j2.cfg
+++ b/liberator/templates/kamcfg/layer.j2.cfg
@@ -1,8 +1,8 @@
 #!KAMAILIO
 ## --------------------------------------------------------------------------------------------------------------------------------
-#!define BRANCH_NATOUT_FLAG 6
-#!define BRANCH_NATSIPPING_FLAG 7
-#!define LIBRE_USER_LOCATION 'LIBREUSRLOC'
+#!define BRANCH_NATOUT_FLAG {{_KAMCONST.BRANCH_NATOUT_FLAG}}
+#!define BRANCH_NATSIPPING_FLAG {{_KAMCONST.BRANCH_NATSIPPING_FLAG}}
+#!define LIBRE_USER_LOCATION '{{_KAMCONST.LIBRE_USER_LOCATION}}'
 ## --------------------------------------------------------------------------------------------------------------------------------
 log_name = '{{layer}}'
 server_header="Server: {{kamcfgs.server_header}}"
