no_server_signature

--- a/liberator/templates/kamcfg/layer.j2.cfg
+++ b/liberator/templates/kamcfg/layer.j2.cfg
@@ -5,9 +5,13 @@
 #!define LIBRE_USER_LOCATION '{{_KAMCONST.LIBRE_USER_LOCATION}}'
 ## --------------------------------------------------------------------------------------------------------------------------------
 log_name = '{{layer}}'
+{%- if kamcfgs.server_header %}
 server_header="Server: {{kamcfgs.server_header}}"
+{%- else %}
+server_signature=no
+{%- endif %}
 sip_warning=0
-debug=2
+debug=1
 log_stderror=no
 memdbg=5
 memlog=5
