fw fix for empty set

--- a/liberator/templates/nft/nftables.j2.conf
+++ b/liberator/templates/nft/nftables.j2.conf
@@ -31,11 +31,15 @@ table inet LIBREFW {
             #---------------------------------------------------------------------
             {%- for name, data in sipprofiles.items() %}
             # TRAFFIC FILTER PER SIP PROFILE - {{name|upper}}
-            define FESIP{{loop.index}} = { {{data.farendsipaddrs}} }
-            define FERTP{{loop.index}} = { {{data.farendrtpaddrs}} }
+            {%- if data.farendsipaddrs %}
+            define FESIP{{loop.index}} = { {{data.farendsipaddrs|join(',')}} }
             tcp dport { {{data.siptcpports|join(',')}} } ip saddr $FESIP{{loop.index}} ip daddr {{data.sip_ip}} counter accept
             udp dport { {{data.sipudpports|join(',')}} } ip saddr $FESIP{{loop.index}} ip daddr {{data.sip_ip}} counter accept
+            {%- endif %}
+            {%- if data.farendrtpaddrs %}
+            define FERTP{{loop.index}} = { {{data.farendrtpaddrs|join(',')}} }
             udp dport $RTPPORTS ip saddr $FERTP{{loop.index}} ip daddr {{data.rtp_ip}} counter accept
+            {%- endif %}
             {%- endfor %}
             #---------------------------------------------------------------------
             # PRECONFIGURED FIREWALL
