--- a/liberator/templates/nft/nftables.j2.conf
+++ b/liberator/templates/nft/nftables.j2.conf
@@ -18,12 +18,12 @@ table inet LIBREFW {
             ip saddr @AttackAvoid drop
             ip saddr @AntiFlooding drop
 
-            tcp flags != syn ct state new drop comment "first packet is not syn"
-            tcp flags & (fin|syn) == (fin|syn) drop comment "new and send fin"
-            tcp flags & (syn|rst) == (syn|rst) drop comment "never met but reset"
-            tcp flags & (fin|syn|rst|psh|ack|urg) < (fin) drop comment "attack"
-            tcp flags & (fin|syn|rst|psh|ack|urg) == (fin|psh|urg) drop comment "xmas attack"
-            ct state invalid counter drop comment "early drop of invalid packets"
+            tcp flags != syn ct state new drop comment "FIRST MEET BUT NOT SYN"
+            tcp flags & (fin|syn) == (fin|syn) drop comment "NEW BUT FIN"
+            tcp flags & (syn|rst) == (syn|rst) drop comment "NEVER MET BUT RESET"
+            tcp flags & (fin|syn|rst|psh|ack|urg) < (fin) drop comment "ATTACK"
+            tcp flags & (fin|syn|rst|psh|ack|urg) == (fin|psh|urg) drop comment "XMAS ATTACK"
+            ct state invalid counter drop comment "INVALID STATE"
 
             ct state {established, related} counter accept
             #---------------------------------------------------------------------
@@ -33,12 +33,12 @@ table inet LIBREFW {
             # TRAFFIC FILTER PER SIP PROFILE - {{name|upper}}
             {%- if data.farendsipaddrs %}
             define FESIP{{loop.index}} = { {{data.farendsipaddrs|join(',')}} }
-            tcp dport { {{data.siptcpports|join(',')}} } ip saddr $FESIP{{loop.index}} ip daddr {{data.sip_ip}} counter accept
-            udp dport { {{data.sipudpports|join(',')}} } ip saddr $FESIP{{loop.index}} ip daddr {{data.sip_ip}} counter accept
+            tcp dport { {{data.siptcpports|join(',')}} } ip saddr $FESIP{{loop.index}} ip daddr {{data.sip_ip}} counter accept comment "SIP TCP {{name|upper}}"
+            udp dport { {{data.sipudpports|join(',')}} } ip saddr $FESIP{{loop.index}} ip daddr {{data.sip_ip}} counter accept comment "SIP UDP {{name|upper}}"
             {%- endif %}
             {%- if data.farendrtpaddrs %}
             define FERTP{{loop.index}} = { {{data.farendrtpaddrs|join(',')}} }
-            udp dport $RTPPORTS ip saddr $FERTP{{loop.index}} ip daddr {{data.rtp_ip}} counter accept
+            udp dport $RTPPORTS ip saddr $FERTP{{loop.index}} ip daddr {{data.rtp_ip}} counter accept comment "RTP {{name|upper}}"
             {%- endif %}
             {%- endfor %}
             #---------------------------------------------------------------------
