nft support access layer

--- a/liberator/templates/nft/nftables.j2.conf
+++ b/liberator/templates/nft/nftables.j2.conf
@@ -42,6 +42,23 @@ table inet LIBREFW {
             {%- endif %}
             {%- endfor %}
             #---------------------------------------------------------------------
+            {%- for name, data in accesslayers.items() %}
+            # TRAFFIC FILTER PER ACCESS LAYER - {{name|upper}}
+            {%- if data.blackips %}
+            tcp dport { {{data.siptcpports|join(',')}} } ip saddr { {{data.blackips|join(',')}} } ip daddr {{data.sip_ip}} counter drop comment "DROP SIP TCP {{name|upper}}"
+            tcp dport { {{data.siptcpports|join(',')}} } ip saddr { 0.0.0.0/0 } ip daddr {{data.sip_ip}} counter accept comment "ACCEPT SIP TCP {{name|upper}}"
+            {%- if data.sipudpports %}
+            udp dport { {{data.sipudpports}} } ip saddr { {{data.blackips|join(',')}} } ip daddr {{data.sip_ip}} counter drop comment "DROP SIP UDP {{name|upper}}"
+            udp dport { {{data.sipudpports}} } ip saddr { 0.0.0.0/0 } ip daddr {{data.sip_ip}} counter accept comment "ACCEPT SIP UDP {{name|upper}}"
+            {%- endif %}
+            {%- else %}
+            tcp dport { {{data.siptcpports|join(',')}} } ip saddr { {{data.whiteips|join(',')}} } ip daddr {{data.sip_ip}} counter accept comment "ACCEPT SIP TCP {{name|upper}}"
+            {%- if data.sipudpports %}
+            udp dport { {{data.sipudpports}} } ip saddr { {{data.whiteips|join(',')}} } ip daddr {{data.sip_ip}} counter accept comment "ACCEPT SIP UDP {{name|upper}}"
+            {%- endif %}
+            {%- endif %}
+            {%- endfor %}
+            #---------------------------------------------------------------------
             # PRECONFIGURED FIREWALL
             include "*.libre.nft"
             #---------------------------------------------------------------------
