optimize nft udp

--- a/liberator/templates/nft/nftables.j2.conf
+++ b/liberator/templates/nft/nftables.j2.conf
@@ -34,7 +34,7 @@ table inet LIBREFW {
             {%- if data.farendsipaddrs %}
             define FESIP{{loop.index}} = { {{data.farendsipaddrs|join(',')}} }
             tcp dport { {{data.siptcpports|join(',')}} } ip saddr $FESIP{{loop.index}} ip daddr {{data.sip_ip}} counter accept comment "SIP TCP {{name|upper}}"
-            udp dport { {{data.sipudpports|join(',')}} } ip saddr $FESIP{{loop.index}} ip daddr {{data.sip_ip}} counter accept comment "SIP UDP {{name|upper}}"
+            udp dport { {{data.sipudpports}} } ip saddr $FESIP{{loop.index}} ip daddr {{data.sip_ip}} counter accept comment "SIP UDP {{name|upper}}"
             {%- endif %}
             {%- if data.farendrtpaddrs %}
             define FERTP{{loop.index}} = { {{data.farendrtpaddrs|join(',')}} }
