reduce nft size

--- a/liberator/templates/nft/nftables.j2.conf
+++ b/liberator/templates/nft/nftables.j2.conf
@@ -14,9 +14,7 @@ table inet LIBREFW {
             iifname lo accept
             iifname != lo ip daddr 127.0.0.0/8 counter drop
 
-            ip saddr @AuthFailure drop
-            ip saddr @AttackAvoid drop
-            ip saddr @AntiFlooding drop
+            ip saddr @TemporaryBlocks drop
 
             tcp flags != syn ct state new drop comment "FIRST MEET BUT NOT SYN"
             tcp flags & (fin|syn) == (fin|syn) drop comment "NEW BUT FIN"
@@ -77,20 +75,9 @@ table inet LIBREFW {
         type filter hook forward priority 0; policy drop;
     }
 
-    set AuthFailure {
+    set TemporaryBlocks {
         type ipv4_addr
         flags timeout
-        timeout 1h
-    }
-
-    set AttackAvoid {
-        type ipv4_addr
-        flags timeout
-        timeout 10d
-    }
-
-    set AntiFlooding {
-        type ipv4_addr
-        flags timeout
+        timeout {{dftbantime}}s
     }
 }
