--- a/platform/libre/rsyslog.d/libre.conf
+++ b/platform/libre/rsyslog.d/libre.conf
@@ -1,10 +1,13 @@
-# https://www.rsyslog.com/doc/v8-stable/configuration/templates.html
-#
 template(name="cloud" type="string" string="<%PRI%>%TIMESTAMP:::date-rfc3339% %HOSTNAME% program=libresbc, pid=%procid%, %msg%")
 template(name="local" type="string" string="%TIMESTAMP:::date-rfc3339% %HOSTNAME% program=libresbc, pid=%procid%, %msg%\n")
 
 local6.*    {{logdir}}/callng.log;local
 local7.*    {{logdir}}/liberator.log;local
+
+#:programname, contains, "kamailio" ~
+local5.*    /var/log/kamailio/kamailio.log
+if $programname == 'kamailio' then /var/log/kamailio/kamailio.log
+& ~
 
 {% if logstash %}
 local6.*    {{rsyslogvar[logstash.protocol]}}{{logstash.host}}:{{logstash.port}};cloud
