--- a/liberator/system/rsyslog.d/libre.conf
+++ b/liberator/system/rsyslog.d/libre.conf
@@ -1,8 +1,8 @@
 template(name="cloud" type="string" string="<%PRI%>%TIMESTAMP:::date-rfc3339% %HOSTNAME% program=libresbc, pid=%procid%, %msg%")
 template(name="local" type="string" string="%TIMESTAMP:::date-rfc3339% %HOSTNAME% program=libresbc, pid=%procid%, %msg%\n")
 
-local6.*    {{logdir}}/callng.log;local
-local7.*    {{logdir}}/liberator.log;local
+local6.*    /var/log/libresbc/callng.log;local
+local7.*    /var/log/libresbc/liberator.log;local
 
 #:programname, contains, "kamailio" ~
 local5.*    /var/log/kamailio/kamailio.log
