--- a/.editorconfig
+++ b/.editorconfig
@@ -16,7 +16,7 @@ charset = utf-8
 trim_trailing_whitespace = true
 insert_final_newline = true
 
-[{*.md,*.yaml,*.xml}]
+[{*.md,*.yaml, *.yml, *.xml}]
 trim_trailing_whitespace = false
 indent_size = 2
 
