fwrate and enhance secure

--- a/liberator/nft/nftables.j2.conf
+++ b/liberator/nft/nftables.j2.conf
@@ -7,22 +7,31 @@
 flush ruleset
 
 table inet LIBREFW {
+
+    set TemporaryBlocks {
+        type ipv4_addr
+        flags timeout
+        timeout {{dftbantime}}s
+    }
+
     chain INBOUND {
         type filter hook input priority 0; policy drop;
             iifname lo ip saddr != 127.0.0.0/8 counter drop
             iifname lo ip6 saddr != ::1/128 counter drop
             iifname lo accept
             iifname != lo ip daddr 127.0.0.0/8 counter drop
-
+            #---------------------------------------------------------------------
             ip saddr @TemporaryBlocks drop
-
+            #---------------------------------------------------------------------
+            ip frag-off & 0x1fff != 0 counter drop comment "IP FRAGMENTS"
             tcp flags != syn ct state new drop comment "FIRST MEET BUT NOT SYN"
             tcp flags & (fin|syn) == (fin|syn) drop comment "NEW BUT FIN"
             tcp flags & (syn|rst) == (syn|rst) drop comment "NEVER MET BUT RESET"
             tcp flags & (fin|syn|rst|psh|ack|urg) < (fin) drop comment "ATTACK"
             tcp flags & (fin|syn|rst|psh|ack|urg) == (fin|psh|urg) drop comment "XMAS ATTACK"
+            tcp flags & (fin|syn|rst|psh|ack|urg) == 0x0 counter drop comment "NULL"
+            tcp flags syn tcp option maxseg size 1-536 counter drop comment "TCPSEGSIZE"
             ct state invalid counter drop comment "INVALID STATE"
-
             ct state {established, related} counter accept
             #---------------------------------------------------------------------
             define RTPPORTS = { {{rtpportrange|join('-')}} }
@@ -57,10 +66,11 @@ table inet LIBREFW {
             {%- endif %}
             {%- endfor %}
             #---------------------------------------------------------------------
+            tcp dport 22 ct state new limit rate over 2/minute add @TemporaryBlocks { ip saddr timeout 10m } counter comment "SSH BRUTEFORCE"
+            #---------------------------------------------------------------------
             # PRECONFIGURED FIREWALL
             include "*.libre.nft"
             #---------------------------------------------------------------------
-            tcp dport 22 ip saddr 0.0.0.0/0 counter accept
             # accept neighbour discovery otherwise connectivity breaks
             #icmpv6 type { nd-neighbor-solicit, echo-request, nd-router-advert, nd-neighbor-advert } counter accept
             icmp type echo-request limit rate 1/second counter accept
@@ -73,11 +83,5 @@ table inet LIBREFW {
     }
     chain FORWARD {
         type filter hook forward priority 0; policy drop;
-    }
-
-    set TemporaryBlocks {
-        type ipv4_addr
-        flags timeout
-        timeout {{dftbantime}}s
     }
 }
