--- a/liberator/nft/nftables.j2.conf
+++ b/liberator/nft/nftables.j2.conf
@@ -8,6 +8,16 @@ flush ruleset
 
 table inet LIBREFW {
 
+    set WhiteHole {
+        type ipv4_addr
+        elements = { {{whiteset|join(',')}} }
+    }
+
+    set BlackHole {
+        type ipv4_addr
+        elements = { {{blackset|join(',')}} }
+    }
+
     set TemporaryBlocks {
         type ipv4_addr
         flags timeout
@@ -21,6 +31,8 @@ table inet LIBREFW {
             iifname lo accept
             iifname != lo ip daddr 127.0.0.0/8 counter drop
             #---------------------------------------------------------------------
+            ip saddr @WhiteHole accept
+            ip saddr @BlackHole drop
             ip saddr @TemporaryBlocks drop
             #---------------------------------------------------------------------
             ip frag-off & 0x1fff != 0 counter drop comment "IP FRAGMENTS"
@@ -66,7 +78,7 @@ table inet LIBREFW {
             {%- endif %}
             {%- endfor %}
             #---------------------------------------------------------------------
-            tcp dport 22 ct state new limit rate over 2/minute add @TemporaryBlocks { ip saddr timeout 10m } counter comment "SSH BRUTEFORCE"
+            tcp dport 22 ct state new limit rate over 5/minute add @TemporaryBlocks { ip saddr timeout 10m } counter comment "SSH BRUTEFORCE"
             #---------------------------------------------------------------------
             # PRECONFIGURED FIREWALL
             include "*.libre.nft"
