fix empty nameset

--- a/liberator/nft/nftables.j2.conf
+++ b/liberator/nft/nftables.j2.conf
@@ -10,12 +10,12 @@ table inet LIBREFW {
 
     set WhiteHole {
         type ipv4_addr
-        elements = { {{whiteset|join(',')}} }
+        {% if whiteset %} elements = { {{whiteset|join(',')}} } {% endif %}
     }
 
     set BlackHole {
         type ipv4_addr
-        elements = { {{blackset|join(',')}} }
+        {% if blackset %} elements = { {{blackset|join(',')}} } {% endif %}
     }
 
     set TemporaryBlocks {
