--- a/liberator/nft/nftables.j2.conf
+++ b/liberator/nft/nftables.j2.conf
@@ -13,13 +13,29 @@ table inet LIBREFW {
         {% if whiteset %} elements = { {{whiteset|join(',')}} } {% endif %}
     }
 
+    set WhiteHoleV6 {
+        type ipv6_addr
+        {% if whitesetv6 %} elements = { {{whitesetv6|join(',')}} } {% endif %}
+    }
+
     set BlackHole {
         type ipv4_addr
         {% if blackset %} elements = { {{blackset|join(',')}} } {% endif %}
     }
 
+    set BlackHoleV6 {
+        type ipv6_addr
+        {% if blacksetv6 %} elements = { {{blacksetv6|join(',')}} } {% endif %}
+    }
+
     set TemporaryBlocks {
         type ipv4_addr
+        flags timeout
+        timeout {{dftbantime}}s
+    }
+
+    set TemporaryBlocksV6 {
+        type ipv6_addr
         flags timeout
         timeout {{dftbantime}}s
     }
@@ -34,6 +50,9 @@ table inet LIBREFW {
             ip saddr @WhiteHole accept
             ip saddr @BlackHole drop
             ip saddr @TemporaryBlocks drop
+            ip6 saddr @WhiteHoleV6 accept
+            ip6 saddr @BlackHoleV6 drop
+            ip6 saddr @TemporaryBlocksV6 drop
             #---------------------------------------------------------------------
             ip frag-off & 0x1fff != 0 counter drop comment "IP FRAGMENTS"
             tcp flags != syn ct state new drop comment "FIRST MEET BUT NOT SYN"
@@ -49,31 +68,69 @@ table inet LIBREFW {
             define RTPPORTS = { {{rtpportrange|join('-')}} }
             #---------------------------------------------------------------------
             {%- for name, data in sipprofiles.items() %}
-            # TRAFFIC FILTER PER SIP PROFILE - {{name|upper}}
-            {%- if data.farendsipaddrs %}
-            define FESIP{{loop.index}} = { {{data.farendsipaddrs|join(',')}} }
-            tcp dport { {{data.siptcpports|join(',')}} } ip saddr $FESIP{{loop.index}} ip daddr {{data.sip_ip}} counter accept comment "SIP TCP {{name|upper}}"
-            udp dport { {{data.sipudpports}} } ip saddr $FESIP{{loop.index}} ip daddr {{data.sip_ip}} counter accept comment "SIP UDP {{name|upper}}"
+            {%- if data.farendsipaddrv4s %}
+            # TRAFFIC FILTER PER SIP PROFILE - IPv4 SIP {{name|upper}}
+            define FESIPv4S{{loop.index}} = { {{data.farendsipaddrv4s|join(',')}} }
+            tcp dport { {{data.siptcpports|join(',')}} } ip saddr $FESIPv4S{{loop.index}} ip daddr {{data.sip_ip}} counter accept comment "IPv4 SIP TCP {{name|upper}}"
+            udp dport { {{data.sipudpports}} } ip saddr $FESIPv4S{{loop.index}} ip daddr {{data.sip_ip}} counter accept comment "IPv4 SIP UDP {{name|upper}}"
             {%- endif %}
-            {%- if data.farendrtpaddrs %}
-            define FERTP{{loop.index}} = { {{data.farendrtpaddrs|join(',')}} }
-            udp dport $RTPPORTS ip saddr $FERTP{{loop.index}} ip daddr {{data.rtp_ip}} counter accept comment "RTP {{name|upper}}"
+            {%- if data.farendrtpaddrv4s %}
+            # TRAFFIC FILTER PER SIP PROFILE - IPv4 RTP {{name|upper}}
+            define FERTPv4S{{loop.index}} = { {{data.farendrtpaddrv4s|join(',')}} }
+            udp dport $RTPPORTS ip saddr $FERTPv4S{{loop.index}} ip daddr {{data.rtp_ip}} counter accept comment "IPv4 RTP {{name|upper}}"
+            {%- endif %}
+            {%- if data.farendsipaddrv6s %}
+            # TRAFFIC FILTER PER SIP PROFILE - IPv6 SIP {{name|upper}}
+            define FESIPv6S{{loop.index}} = { {{data.farendsipaddrv6|join(',')}} }
+            tcp dport { {{data.siptcpports|join(',')}} } ip6 saddr $FESIPv6S{{loop.index}} ip6 daddr {{data.sip_ip}} counter accept comment "IPv6 SIP TCP {{name|upper}}"
+            udp dport { {{data.sipudpports}} } ip6 saddr $FESIPv6S{{loop.index}} ip6 daddr {{data.sip_ip}} counter accept comment "IPv6 SIP UDP {{name|upper}}"
+            {%- endif %}
+            {%- if data.farendrtpaddrv6s %}
+            # TRAFFIC FILTER PER SIP PROFILE - IPv6 RTP {{name|upper}}
+            define FERTPv6S{{loop.index}} = { {{data.farendrtpaddrv6s|join(',')}} }
+            udp dport $RTPPORTS ip6 saddr $FERTPv6S{{loop.index}} ip6 daddr {{data.rtp_ip}} counter accept comment "IPv6 RTP {{name|upper}}"
             {%- endif %}
             {%- endfor %}
             #---------------------------------------------------------------------
             {%- for name, data in accesslayers.items() %}
-            # TRAFFIC FILTER PER ACCESS LAYER - {{name|upper}}
             {%- if data.blackips %}
-            tcp dport { {{data.siptcpports|join(',')}} } ip saddr { {{data.blackips|join(',')}} } ip daddr {{data.sip_ip}} counter drop comment "DROP SIP TCP {{name|upper}}"
-            tcp dport { {{data.siptcpports|join(',')}} } ip saddr { 0.0.0.0/0 } ip daddr {{data.sip_ip}} counter accept comment "ACCEPT SIP TCP {{name|upper}}"
-            {%- if data.sipudpports %}
-            udp dport { {{data.sipudpports}} } ip saddr { {{data.blackips|join(',')}} } ip daddr {{data.sip_ip}} counter drop comment "DROP SIP UDP {{name|upper}}"
-            udp dport { {{data.sipudpports}} } ip saddr { 0.0.0.0/0 } ip daddr {{data.sip_ip}} counter accept comment "ACCEPT SIP UDP {{name|upper}}"
+            # TRAFFIC FILTER PER ACCESS LAYER - IPv4 BLACKIPS {{name|upper}}
+            {%- if data.siptcpports %}
+            tcp dport { {{data.siptcpports|join(',')}} } ip saddr { {{data.blackips|join(',')}} } ip daddr {{data.sip_ip}} counter drop comment "DROP IPv4 SIP TCP {{name|upper}}"
+            tcp dport { {{data.siptcpports|join(',')}} } ip saddr { 0.0.0.0/0 } ip daddr {{data.sip_ip}} counter accept comment "ACCEPT IPv4 SIP TCP {{name|upper}}"
             {%- endif %}
-            {%- else %}
-            tcp dport { {{data.siptcpports|join(',')}} } ip saddr { {{data.whiteips|join(',')}} } ip daddr {{data.sip_ip}} counter accept comment "ACCEPT SIP TCP {{name|upper}}"
             {%- if data.sipudpports %}
-            udp dport { {{data.sipudpports}} } ip saddr { {{data.whiteips|join(',')}} } ip daddr {{data.sip_ip}} counter accept comment "ACCEPT SIP UDP {{name|upper}}"
+            udp dport { {{data.sipudpports}} } ip saddr { {{data.blackips|join(',')}} } ip daddr {{data.sip_ip}} counter drop comment "DROP IPv4 SIP UDP {{name|upper}}"
+            udp dport { {{data.sipudpports}} } ip saddr { 0.0.0.0/0 } ip daddr {{data.sip_ip}} counter accept comment "ACCEPT IPv4 SIP UDP {{name|upper}}"
+            {%- endif %}
+            {%- endif %}
+            {%- if data.whiteips %}
+            # TRAFFIC FILTER PER ACCESS LAYER - IPv4 WHITEIPS {{name|upper}}
+            {%- if data.siptcpports %}
+            tcp dport { {{data.siptcpports|join(',')}} } ip saddr { {{data.whiteips|join(',')}} } ip daddr {{data.sip_ip}} counter accept comment "ACCEPT IPv4 SIP TCP {{name|upper}}"
+            {%- endif %}
+            {%- if data.sipudpports %}
+            udp dport { {{data.sipudpports}} } ip saddr { {{data.whiteips|join(',')}} } ip daddr {{data.sip_ip}} counter accept comment "ACCEPT IPv4 SIP UDP {{name|upper}}"
+            {%- endif %}
+            {%- endif %}
+            {%- if data.blackipv6s %}
+            # TRAFFIC FILTER PER ACCESS LAYER - IPv6 BLACKIPS {{name|upper}}
+            {%- if data.siptcpports %}
+            tcp dport { {{data.siptcpports|join(',')}} } ip6 saddr { {{data.blackipv6s|join(',')}} } ip6 daddr {{data.sip_ip}} counter drop comment "DROP IPv6 vSIP TCP {{name|upper}}"
+            tcp dport { {{data.siptcpports|join(',')}} } ip6 saddr { 0.0.0.0/0 } ip6 daddr {{data.sip_ip}} counter accept comment "ACCEPT IPv6 SIP TCP {{name|upper}}"
+            {%- endif %}
+            {%- if data.sipudpports %}
+            udp dport { {{data.sipudpports}} } ip6 saddr { {{data.blackipv6s|join(',')}} } ip6 daddr {{data.sip_ip}} counter drop comment "DROP IPv6 SIP UDP {{name|upper}}"
+            udp dport { {{data.sipudpports}} } ip6 saddr { 0.0.0.0/0 } ip6 daddr {{data.sip_ip}} counter accept comment "ACCEPT IPv6 SIP UDP {{name|upper}}"
+            {%- endif %}
+            {%- endif %}
+            {%- if data.whiteipv6s %}
+            # TRAFFIC FILTER PER ACCESS LAYER - IPv6 WHITEIPS {{name|upper}}
+            {%- if data.siptcpports %}
+            tcp dport { {{data.siptcpports|join(',')}} } ip6 saddr { {{data.whiteipv6s|join(',')}} } ip6 daddr {{data.sip_ip}} counter accept comment "ACCEPT IPv6 SIP TCP {{name|upper}}"
+            {%- endif %}
+            {%- if data.sipudpports %}
+            udp dport { {{data.sipudpports}} } ip6 saddr { {{data.whiteipv6s|join(',')}} } ip6 daddr {{data.sip_ip}} counter accept comment "ACCEPT IPv6 SIP UDP {{name|upper}}"
             {%- endif %}
             {%- endif %}
             {%- endfor %}
@@ -84,7 +141,7 @@ table inet LIBREFW {
             include "*.libre.nft"
             #---------------------------------------------------------------------
             # accept neighbour discovery otherwise connectivity breaks
-            #icmpv6 type { nd-neighbor-solicit, echo-request, nd-router-advert, nd-neighbor-advert } counter accept
+            icmpv6 type { nd-neighbor-solicit, echo-request, nd-router-advert, nd-neighbor-advert } limit rate 1/second counter accept
             icmp type echo-request limit rate 1/second counter accept
 
             # count and drop any other traffic
