--- a/liberator/fscfg/etc/fs_cli.conf
+++ b/liberator/fscfg/etc/fs_cli.conf
@@ -1,4 +1,4 @@
 [default]
-host     => 127.0.0.1
-port     => 8021
-password => {{secret}}
+host     => {{eslhost}}
+port     => {{eslport}}
+password => {{eslpassword}}
