--- a/liberator/nft/nftables.j2.conf
+++ b/liberator/nft/nftables.j2.conf
@@ -81,7 +81,7 @@ table inet LIBREFW {
             {%- endif %}
             {%- if data.farendsipaddrv6s %}
             # TRAFFIC FILTER PER SIP PROFILE - IPv6 SIP {{name|upper}}
-            define FESIPv6S{{loop.index}} = { {{data.farendsipaddrv6|join(',')}} }
+            define FESIPv6S{{loop.index}} = { {{data.farendsipaddrv6s|join(',')}} }
             tcp dport { {{data.siptcpports|join(',')}} } ip6 saddr $FESIPv6S{{loop.index}} ip6 daddr {{data.sip_ip}} counter accept comment "IPv6 SIP TCP {{name|upper}}"
             udp dport { {{data.sipudpports}} } ip6 saddr $FESIPv6S{{loop.index}} ip6 daddr {{data.sip_ip}} counter accept comment "IPv6 SIP UDP {{name|upper}}"
             {%- endif %}
