--- a/liberator/system/systemd/liberator.service
+++ b/liberator/system/systemd/liberator.service
@@ -7,6 +7,7 @@ Before=freeswitch.service
 Type=simple
 User=root
 Group=root
+EnvironmentFile={{dstdir}}/libre.env
 WorkingDirectory={{dstdir}}/liberator
 ExecStart=/usr/bin/python3 {{dstdir}}/liberator/main.py
 
