move dynamic rsyslog to 3rd-party

--- a/liberator/system/rsyslog.d/libre.conf
+++ b/liberator/system/rsyslog.d/libre.conf
@@ -7,9 +7,5 @@ local7.*    /var/log/libresbc/liberator.log;local
 #:programname, contains, "kamailio" ~
 local5.*    /var/log/kamailio/kamailio.log
 if $programname == 'kamailio' then /var/log/kamailio/kamailio.log
-& ~
+& stop
 
-{% if logstash %}
-local6.*    {{rsyslogvar[logstash.protocol]}}{{logstash.host}}:{{logstash.port}};cloud
-local7.*    {{rsyslogvar[logstash.protocol]}}{{logstash.host}}:{{logstash.port}};cloud
-{% endif %}
