Fix kamailio syslog format

--- a/liberator/system/rsyslog.d/libre.conf
+++ b/liberator/system/rsyslog.d/libre.conf
@@ -5,7 +5,7 @@ local6.*    /var/log/libresbc/callng.log;local
 local7.*    /var/log/libresbc/liberator.log;local
 
 #:programname, contains, "kamailio" ~
-local5.*    /var/log/kamailio/kamailio.log
+local5.*    /var/log/kamailio/kamailio.log;local
 if $programname == 'kamailio' then /var/log/kamailio/kamailio.log
 & stop
 
