--- a/liberator/system/rsyslog.d/libre.conf
+++ b/liberator/system/rsyslog.d/libre.conf
@@ -1,5 +1,5 @@
 template(name="cloud" type="string" string="<%PRI%>%TIMESTAMP:::date-rfc3339% %HOSTNAME% program=libresbc, pid=%procid%, %msg%")
-template(name="local" type="string" string="%TIMESTAMP:::date-rfc3339% %HOSTNAME% program=libresbc, pid=%procid%, %msg%\n")
+template(name="local" type="string" string="%TIMESTAMP:::date-rfc3339% %HOSTNAME% libresbc %procid% %syslogpriority-text:::uppercase% %msg%\n")
 
 local6.*    /var/log/libresbc/callng.log;local
 local7.*    /var/log/libresbc/liberator.log;local
