Fix two bugs in previous commits

--- a/liberator/kamcfg/layer.j2.tls.cfg
+++ b/liberator/kamcfg/layer.j2.tls.cfg
@@ -2,8 +2,8 @@
 method = {{kamcfgs.tls.method}}
 verify_certificate = no
 require_certificate = no
-private_key = {{kamcfgs.tls.cert}}
-certificate = {{kamcfgs.tls.key}}
+private_key = {{kamcfgs.tls.key}}
+certificate = {{kamcfgs.tls.cert}}
 {%- if kamcfgs.tlssni %}
 server_name = {{kamcfgs.tls.sni}}
 {%- endif %}
